# FlipGearboxFactoryTest

./: $out  .gitignore  CMakeLists.txt  CMakePresets.json  ENCODER_PROACTIVE_INTEGRATION.md  EXECPLAN_DiagnosticsRedesign.md  FINAL_SOLUTION.md  HistoryService_Review.txt  IMPLEMENTATION_PROGRESS.md  LAUNCH_READINESS_REPORT.md  MERGE_STATUS_REPORT.md  MIGRATION_SUMMARY.md  MODBUS_0x04_0x05_IMPLEMENTATION_VERIFICATION.md  Main.qml  PROJECT_STATUS.md  QT6_COMPREHENSIVE_REPORT.md  QT6_OPTIMIZATION_SUMMARY.md  QT6_UI_AUDIT_REPORT.md  QT6_UI_AUDIT_REPORT_FINAL.md  QtChartsTest.qml  QtGraphs_Example.qml  Qt_Charts_Complete_Answer.md  Qt_Charts_Correction.md  Qt_Charts_QML_Answer.md  Qt测试最佳实践调研报告.md  README.md  README.zh-CN.md  TESTING_GUIDE.md  THREAD_SAFETY_FIX.md  TelemetryBuffer_Review.txt  agent.md  analyze_priority.ps1  check_qt6_ui.ps1  check_qt6_ui_final.ps1  fix_layouts.ps1  main.cpp  migration_plan.txt  quick_test.bat  run.bat  task_summary.txt  (+7 more)
.trae/rules/: superpowers.md
.trae/specs/enhance-recipe-device-params/: checklist.md  spec.md  tasks.md
.trae/specs/full-quality-remediation/: checklist.md  spec.md  tasks.md
.trae/specs/remove-hardcoded-fake-data/: checklist.md  spec.md  tasks.md
.trae/specs/serial-protocol-enhancement/: IMPLEMENTATION_SUMMARY.md  checklist.md  spec.md  tasks.md
.trae/specs/upgrade-qt6-latest-features/: checklist.md  spec.md  tasks.md
Docs/: ADR-001-Emergency-Stop-Implementation.md  AQMD3610NS-A2.md  BoundaryProtectionReport.md  Brainstorm_Architecture_Iteration_Plan.md  DEPLOYMENT_GUIDE.md  DOCUMENTATION_UPDATE_LOG.md  DYN-200使用手册印刷V3.7版本中性(12)(3)_2025-08-02-13_23_22.md  Device_Register_Reference_Guide.md  Documentation_Coverage_Gap_Analysis.md  Documentation_System_Analysis_Report.md  Duplicate_Documents_List.md  EncoderProactiveListener_Supplement_Plan.md  MOCK_MODE_GUIDE.md  MOCK_PHYSICS_VALIDATION_PLAN.md  MOCK_VALIDATION_TASK_BREAKDOWN.md  Obsolete_Documents_List.md  PHYSICS_VALIDATION_INTEGRATION.md  PROJECT_STRUCTURE_PLAN.md  QT6.11_FEATURE_MAPPING.md  QT_TEST_REFACTORING_PLAN.md  Qt_Charts_vs_Graphs.md  SIMULATION_GUIDE.md  STATIC_CODE_REVIEW_REPORT.md  SimulationTestFramework_Integration.md  SimulationTestFramework_Summary.md  TASK_REPORT_CrossDevicePhysicsTests.md  TROUBLESHOOTING.md  UI_QML_DOCUMENT_AUDIT_REPORT.md  USER_MANUAL.md  VIEWMODEL_PHYSICS_INTEGRATION.md  error_handling_improvements.md  infrastructure_improvements.md  motor.html  上位机完整开发工作流设计.md  单圈编码器.md  双通道数控电源用户手册.md  测试闭环与实时监控方案.md
Docs/architecture/: system_architecture.md
Docs/archive/: DYN200_Integration_Architecture_Analysis.md  DeviceImplementationReview.md  Full_Device_Integration_Check_Summary_Report.md  Full_Device_Integration_Summary_Report.md  INFRASTRUCTURE.md  MockDeviceImplementationSummary.md  MockDeviceSimulator.md  MockMotorDevice_MagnetDetection_Enhancement.md  Multi_Device_Architecture_Consistency_Report.md  Multi_Device_Integration_Architecture_Consistency_Analysis.md  Protocol_Layer_Thread_Safety_And_Error_Signal_Fix.md  QT6_MODERNIZATION_PLAN.md  SimulationTestFramework.md
Docs/drafts/apple-industrial-prototype/: design-system.md  index.html
Docs/references/: shadcn-ui-parity.md
Docs/superpowers/plans/: 2026-04-15-motor-qt6-mvvm-implementation.md
Docs/superpowers/specs/: 2026-04-15-motor-qt6-mvvm-design.md  2026-04-17-device-registers-correction.md  2026-04-17-real-device-test-flow-design.md  2026-04-20-device-register-verification.md  2026-04-20-protocol-layer-completion-report.md
assets/: gen_icon.py
build-verify/: DartConfiguration.tcl  Makefile
build-verify/FlipGearboxFactoryTest/: Main.qml  appFlipGearboxFactoryTest_qml_module_dir_map.qrc
build-verify/qmltypes/: appFlipGearboxFactoryTest_foreign_types.txt
config/: station.json
config/recipes/: GBX-42A.json  valid.json
data/: history.jsonl  team_status.json
scripts/: Build-And-Test.ps1  build_project.bat  check_qt6.ps1  clean-build.ps1  quick_test.bat  run-tests.ps1  run_ci.bat  run_tests.bat
src/domain/: FailureReason.h  GearboxTestEngine.cpp  GearboxTestEngine.h  RecipeValidator.cpp  RecipeValidator.h  TelemetrySnapshot.h  TestRecipe.h  TestResults.h  TestRunState.h
src/infrastructure/acquisition/: AcquisitionScheduler.cpp  DevicePoller.h  (+2 more)
src/teamops/: FileTeamDataProvider.cpp  FileTeamDataProvider.h  ITeamDataProvider.cpp  ITeamDataProvider.h  MockTeamDataProvider.cpp  MockTeamDataProvider.h  TeamMonitorService.cpp  TeamMonitorService.h  TeamOpsViewModel.cpp  TeamOpsViewModel.h  TeamRoleStatus.cpp  TeamRoleStatus.h
src/ui/: ChartPainter.cpp  ChartPainter.h
src/viewmodels/: DiagnosticsViewModel.cpp  DiagnosticsViewModel.h  HistoryViewModel.cpp  HistoryViewModel.h  RecipeViewModel.cpp  RecipeViewModel.h  TestExecutionViewModel.cpp  TestExecutionViewModel.h
tests/: AngleTestMagnetIntegrationTests.cpp  BoundaryProtectionTests.cpp  DomainEngineAdvancedTests.cpp  DomainEngineAdvancedTests_README.md  DomainEngineTests.cpp  MagnetDetectionMockTests.cpp  ProtocolLayerTests.cpp  TestExecutionVerification.cpp  test_error_handling.cpp  test_telemetry_size.cpp
tests/devices/: BrakePowerConstantVoltageTest.cpp
tests/domain/: JudgementLogicTests.cpp
tests/framework/: AutoTestFramework.cpp  AutoTestFramework.h  AutoTestFrameworkTests.cpp  MockTestRunner.cpp  MockTestRunner.h  MockTestRunnerTests.cpp  UnifiedTestRunner.cpp
tests/infrastructure/: PerformanceMonitorTests.cpp  TestReportGeneratorTests.cpp
tests/mocks/: MAGNET_DETECTION_USAGE.md  MockDevices.cpp  MockDevices.h
tests/protocol/: ModbusCrcTests.cpp
tests/simulation/: CrossDevicePhysicsTests.cpp  CrossDevicePhysicsTests_README.md  GearboxSimulationIntegrationTests.cpp  HardwareSimulationHarnessTests.cpp  MockDeviceQuickTest.cpp  MockMotorMagnetDetectionTests.cpp  MockPhysicsValidationTests.cpp  README.md  SimulationFrameworkExampleTests.cpp  SimulationRuntimeTests.cpp  TEST_COVERAGE.md
tests/stability/: LongRunningStabilityTest.cpp
tests/ui/: QmlSmokeTests.cpp  TestExecutionPageTests.cpp
tests/viewmodels/: HistoryViewModelTests.cpp  RecipeViewModelTests.cpp  TestExecutionViewModelTests.cpp
(+268 files in other folders)
